--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,13 +1,12 @@
 .custom-navbar {
     height: 50px;
+    width: 100%;
 }
 .container-nav {
     height: 50px;
     width: 100%;
     padding: 0;
     margin-top: 0px;
-    margin-left: 100px;
-    margin-right: 30px;
 }
 .navbar-brand {
     height: 50px;
@@ -39,16 +38,16 @@
     padding-top: 5px;
 }
 .search-input {
-     width: 200px;
-     height: 30px;
-     font-size: 13px;
-     border: 0;
-     border-radius: 10px;
-     outline: none;
-     padding-left: 10px;
-     background-color: #f1f3f5;
-     /*background-color: rgb(233, 233, 233);*/
- }
+    width: 200px;
+    height: 30px;
+    font-size: 13px;
+    border: 0;
+    border-radius: 10px;
+    outline: none;
+    padding-left: 10px;
+    background-color: #f1f3f5;
+    /*background-color: rgb(233, 233, 233);*/
+}
 .search-btn {
     border: 0;
     background-color: transparent;
@@ -65,11 +64,11 @@
     font-weight: 900 !important;
 }*/
 .material-symbols-outlined {
-     font-variation-settings:
-             'FILL' 0,
-             'wght' 400,
-             'GRAD' 300,
-             'opsz' 48;
+    font-variation-settings:
+            'FILL' 0,
+            'wght' 400,
+            'GRAD' 300,
+            'opsz' 48;
     font-size: 20px;
 }
 
@@ -112,5 +111,4 @@
     pointer-events: none;
     opacity: 0.65;
 }
-
 
