--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -31,8 +31,8 @@
 <!--            <section class="py-5">-->
 <!--                <div class="container px-4 px-lg-5 mt-5">-->
                     <div layout:fragment="content"></div>
-<!--                </div>-->
-<!--            </section>-->
+<!--                </div>
+            </section>-->
             <!-- Footer-->
             <!--        <footer class="py-5 bg-dark">
                     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
