--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -6,15 +6,19 @@
 <head layout:fragment="head">
   <meta charset="utf-8">
   <style>
+    .custom-container {
+      background-color: #fff0e0;
+    }
     .form-container {
       max-width: 560px;
       margin: 20px;
     }
     .loginForm-border {
-      height: 600px;
-      border: 1px solid #dee2e6;
+      height: 500px;
+      width: 400px;
+      border: 1px solid #f1f3f5;
       border-radius: 20px;
-      /*box-shadow: 10px 20px 30px 40px #ced4da;*/
+      box-shadow: 0px 5px 10px 0px #f1f3f5;
       padding: 0px 20px 50px 20px;
     }
     .field-error {
@@ -29,7 +33,7 @@
 </head>
 
 <div layout:fragment="content">
-  <section class="container px-md-5 mt-5 d-flex justify-content-center">
+  <section class="px-md-5 mt-5 d-flex justify-content-center custom-container">
     <div class="form-container py-5">
       <div class="loginForm-border">
         <div class="py-4 text-center">
