--- a/src/main/resources/templates/chat/chatRoomList.html
+++ b/src/main/resources/templates/chat/chatRoomList.html
@@ -7,40 +7,46 @@
 </head>
 
 <div class="container bootstrap snippets bootdey" layout:fragment="content">
-    <div class="row">
-        <div class="col-md-15 bg-white ">
-            <div class=" row border-bottom padding-sm" style="height: 40px;">
-                채팅목록
-            </div>
-            <!-- member list -->
-            <ul class="friend-list">
-                <th:block th:each="chatRoom : ${chatRoomList}">
-                <li th:id="'roomId'+${chatRoom.roomId}">
-                    <a th:href="@{/chat/chatRoom/{roomId}/{postId}/{sellerId}/{buyerId}/(roomId=${chatRoom.roomId}, postId=${chatRoom.postId}, sellerId=${chatRoom.sellerId}, buyerId=${chatRoom.buyerId})}" class="clearfix">
-                        <div class="profile_img">
-                            <img th:if="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.sellerId}/profileImg|" alt="프로필이미지(판매자)">
-                            <img th:unless="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.buyerId}/profileImg|" alt="프로필이미지(구매자)">
-                        </div>
-                        <div class="name_message">
-                            <div class="friend-name">
-                                <strong th:if="${chatRoom.buyerId == session.loginMember.memId}">[[${chatRoom.sellerId}]]</strong>
-                                <strong th:unless="${chatRoom.buyerId == session.loginMember.memId}">[[${chatRoom.buyerId}]]</strong>
+<section class="py-5">
+    <div class="container px-4 my-5">
+        <div class="row">
+            <div class="col-md-15 bg-white ">
+                <div class=" row border-bottom padding-sm">
+                    <h3>채팅목록</h3>
+                </div>
+                <p class="mt-3 fs-5 fw-normal text-secondary" th:if="${chatRoomList.isEmpty()}">대화중인 채팅방이 없습니다.</p>
+
+                <!-- member list -->
+                <ul class="friend-list">
+                    <th:block th:each="chatRoom : ${chatRoomList}">
+                    <li th:id="'roomId'+${chatRoom.roomId}">
+                        <a th:href="@{/chat/chatRoom/{roomId}/{postId}/{sellerId}/{buyerId}/(roomId=${chatRoom.roomId}, postId=${chatRoom.postId}, sellerId=${chatRoom.sellerId}, buyerId=${chatRoom.buyerId})}" class="clearfix">
+                            <div class="profile_img">
+                                <img th:if="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.sellerId}/profileImg|" alt="프로필이미지(판매자)">
+                                <img th:unless="${chatRoom.buyerId == session.loginMember.memId}" th:src="|/members/${chatRoom.buyerId}/profileImg|" alt="프로필이미지(구매자)">
                             </div>
-                            <div class="last-message text-muted">[[${chatRoom.message}]]</div>
-                        </div>
-                        <div>
-                            <small class="time text-muted">[[${chatRoom.createdTime}]]</small>
-                            <small class="chat-alert label label-danger">[[${chatRoom.unacknowledgedMessageCount}]]</small>
-                        </div>
-                        <div class="product_thumbnail">
-                            <img class="card-img-top" th:src="|/post/firstImg/${chatRoom.postId}|" alt="제품사진" />
-                        </div>
-                    </a>
-                </li>
-                </th:block>
-            </ul>
+                            <div class="name_message">
+                                <div class="friend-name">
+                                    <strong th:if="${chatRoom.buyerId == session.loginMember.memId}">[[${chatRoom.sellerId}]]</strong>
+                                    <strong th:unless="${chatRoom.buyerId == session.loginMember.memId}">[[${chatRoom.buyerId}]]</strong>
+                                </div>
+                                <div class="last-message text-muted">[[${chatRoom.message}]]</div>
+                            </div>
+                            <div>
+                                <small class="time text-muted">[[${chatRoom.createdTime}]]</small>
+                                <small class="chat-alert label label-danger">[[${chatRoom.unacknowledgedMessageCount}]]</small>
+                            </div>
+                            <div class="product_thumbnail">
+                                <img class="card-img-top" th:src="|/post/firstImg/${chatRoom.postId}|" alt="제품사진" />
+                            </div>
+                        </a>
+                    </li>
+                    </th:block>
+                </ul>
+            </div>
         </div>
     </div>
+</section>
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
