--- a/src/main/resources/templates/myPage/sellList.html
+++ b/src/main/resources/templates/myPage/sellList.html
@@ -10,17 +10,17 @@
 
 <div layout:fragment="content">
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-4 my-5">
         <div class="d-flex">
-            <span class="span" onclick="onSaleFunc()">판매중</span>
-            <span class="span" onclick="soldFunc()">판매완료</span>
-            <span class="span" onclick="hiddenFunc()">숨김</span>
+            <span id="sp_onSale" class="span" onclick="onSaleFunc()">판매중</span>
+            <span id="sp_sold" class="span" onclick="soldFunc()">판매완료</span>
+            <span id="sp_hidden" class="span" onclick="hiddenFunc()">숨김</span>
         </div>
 
         <section id="sec_onSale" class="py-5" >
             <h2>판매중</h2>
-            <div class="container px-4 px-lg-5 mt-5">
-                <div th:if="${onSaleAndRsv.isEmpty()}"><p>판매중인 상품이 없습니다.</p></div>
+            <div class="container px-4 mt-5">
+                <div th:if="${onSaleAndRsv.isEmpty()}"><p class="fs-5 fw-normal text-secondary">판매중인 상품이 없습니다.</p></div>
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                 <div class="col mb-6" th:unless="${onSaleAndRsv.isEmpty()}" th:each = "post:${onSaleAndRsv}">
                     <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
@@ -32,9 +32,11 @@
                                 <!-- 제목-->
                                 <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
                                 <!--지역, 시간-->
-                                <p class="fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</p>
+                                <h6 class="fs-7 fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</h6>
                                 <!-- 가격-->
                                 <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                <h6 class="fw-bolder" th:if="${post.price} == 0">가격없음</h6>
+
                                 <!--예약중 배지-->
                                 <span class="badge bg-success" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
                             </div>
@@ -52,15 +54,13 @@
             </div>
         </div>
         </section>
-    </div>
-</section>
 
 
 
 <section id="sec_sold" class="py-5">
     <h2>판매완료</h2>
-    <div class="container px-4 px-lg-5 mt-5">
-        <div th:if="${soldList.isEmpty()}"><p>판매완료한 상품이 없습니다.</p></div>
+    <div class="container px-4 mt-5">
+        <div th:if="${soldList.isEmpty()}"><p class="fs-5 fw-normal text-secondary">판매완료한 상품이 없습니다.</p></div>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-6" th:unless="${soldList.isEmpty()}"  th:each = "soldPost:${soldList}">
                 <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${soldPost.postDto.postId}|}'|" style="cursor: pointer;">
@@ -72,9 +72,11 @@
                         <!-- 제목-->
                         <h5 class="fw-bolder text-truncate" th:text="${soldPost.postDto.title}">제목</h5>
                         <!--지역, 시간-->
-                        <p class="fw-normal text-secondary">[[${soldPost.postDto.loc.locName}]] ∙ [[${soldPost.postDto.createdTime}]]</p>
+                        <h6 class="fs-7 fw-normal text-secondary">[[${soldPost.postDto.loc.locName}]] ∙ [[${soldPost.postDto.createdTime}]]</h6>
                         <!-- 가격-->
                         <h6 class="fw-bolder" th:if="${soldPost.postDto.price}!=0" th:text="|${soldPost.postDto.price}원|">가격</h6>
+                        <h6 class="fw-bolder" th:if="${soldPost.postDto.price} == 0">가격없음</h6>
+
                     </div>
                 </div>
                 </div>
@@ -94,22 +96,26 @@
 
 <section id="sec_hidden" class="py-5">
     <h2>숨김</h2>
-    <div class="container px-4 px-lg-5 mt-5">
-        <div th:if="${hidePostList.isEmpty()}"><p>숨긴 게시글이 없습니다.</p></div>
+    <div class="container px-4 mt-5">
+        <div th:if="${hidePostList.isEmpty()}"><p class="fs-5 fw-normal text-secondary">숨긴 게시글이 없습니다.</p></div>
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-6" th:unless="${hidePostList.isEmpty()}" th:each = "hidePost:${hidePostList}">
             <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${hidePost.postId}|}'|" style="cursor: pointer;">
                 <!-- 제품사진-->
                 <img class="card-img-top" th:src="|/post/firstImg/${hidePost.postId}|" alt="제품사진" />
                 <!-- Product details-->
-                <div class="card-body p-4">
+                <div class="card-body p-3">
                     <div class="text-center">
                         <!-- 제목-->
                         <h5 class="fw-bolder text-truncate" th:text="${hidePost.title}">제목</h5>
                         <!--지역, 시간-->
-                        <p class="w-normal text-secondary">[[${hidePost.loc.locName}]]∙ [[${hidePost.createdTime}]]</p>
+                        <h6 class="fs-7 fw-normal text-secondary">[[${hidePost.loc.locName}]]∙ [[${hidePost.createdTime}]]</h6>
                         <!-- 가격-->
                         <h6 class="fw-bolder" th:if="${hidePost.price}!=0" th:text="|${hidePost.price}원|">가격</h6>
+                        <h6 class="fw-bolder" th:if="${hidePost.price} == 0">가격없음</h6>
+                        <!--예약중,판매완료 배지-->
+                        <span class="badge bg-success" th:if="${hidePost.sellState.getSellStateName().equals('예약중')}">예약중</span>
+                        <span class="badge bg-secondary" th:if="${hidePost.sellState.getSellStateName().equals('판매완료')}">거래완료</span>
                     </div>
                 </div>
                 </div>
@@ -117,10 +123,12 @@
                     <span class="span-inner" th:onclick="hideState([[${hidePost.postId}]], [[${hidePost.hideState.getHideStateName()}]])">숨기기 해제</span>
                 </div>
             </div>
-
+        </div>
     </div>
 </section>
 
+    </div>
+</section>
 </div>
 
 
@@ -129,21 +137,32 @@
     <script th:inline="javascript">
         $('#sec_sold').hide();
         $('#sec_hidden').hide();
+        $('#sp_onSale').addClass('span-bottom');
 
         function onSaleFunc(){
             $('#sec_onSale').show();
             $('#sec_sold').hide();
             $('#sec_hidden').hide();
+            $('#sp_onSale').addClass('span-bottom');
+            $('#sp_sold').removeClass('span-bottom');
+            $('#sp_hidden').removeClass('span-bottom');
+
         }
         function soldFunc(){
             $('#sec_onSale').hide();
             $('#sec_sold').show();
             $('#sec_hidden').hide();
+            $('#sp_onSale').removeClass('span-bottom');
+            $('#sp_sold').addClass('span-bottom');
+            $('#sp_hidden').removeClass('span-bottom');
         }
         function hiddenFunc(){
             $('#sec_onSale').hide();
             $('#sec_sold').hide();
             $('#sec_hidden').show();
+            $('#sp_onSale').removeClass('span-bottom');
+            $('#sp_sold').removeClass('span-bottom');
+            $('#sp_hidden').addClass('span-bottom');
         }
 
         //게시물 숨기기
