--- a/src/main/resources/templates/post/update_post.html
+++ b/src/main/resources/templates/post/update_post.html
@@ -5,7 +5,7 @@
 
 <head layout:fragment="head">
     <title>상품 수정</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
     <!--이미지 미리보기 css-->
     <link rel="stylesheet" href="/css/previewImg.css">
 </head>
