--- a/src/main/resources/templates/post/upload_page.html
+++ b/src/main/resources/templates/post/upload_page.html
@@ -5,7 +5,7 @@
 
 <head layout:fragment="head">
     <title>상품 등록</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
     <!--이미지 미리보기 css-->
     <link rel="stylesheet" href="/css/previewImg.css">
 </head>
@@ -53,7 +53,7 @@
             <!--카카오맵 지도-->
             <div id="mapArea">
                 <br/>
-                <p class="fw-bold">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
+                <p class="fw-bold fs-6">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
 
                 <div id="map" style="width:100%;height:350px; margin: 20px;"></div>
 
