--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,16 +1,15 @@
 .custom-navbar {
     height: 50px;
-    width: 100%;
+    box-shadow: 0px 2px 3px 0px #efece9;
 }
 .container-nav {
     height: 50px;
     width: 100%;
     padding: 0;
-    margin-top: 0px;
 }
 .navbar-brand {
     height: 50px;
-    padding-top: 10px;
+    padding-top: 8px;
 }
 .img-icon{
     height: 25px;
@@ -32,22 +31,24 @@
 }
 .navbar-collapse {
 }
-
+.nav-name {
+    font-size: 14px;
+}
 
 .search-bar {
     padding-top: 5px;
 }
 .search-input {
-    width: 200px;
-    height: 30px;
-    font-size: 13px;
-    border: 0;
-    border-radius: 10px;
-    outline: none;
-    padding-left: 10px;
-    background-color: #f1f3f5;
-    /*background-color: rgb(233, 233, 233);*/
-}
+     width: 200px;
+     height: 30px;
+     font-size: 13px;
+     border: 0;
+     border-radius: 10px;
+     outline: none;
+     padding-left: 10px;
+     background-color: #f1f3f5;
+     /*background-color: rgb(233, 233, 233);*/
+ }
 .search-btn {
     border: 0;
     background-color: transparent;
@@ -64,14 +65,17 @@
     font-weight: 900 !important;
 }*/
 .material-symbols-outlined {
-    font-variation-settings:
-            'FILL' 0,
-            'wght' 400,
-            'GRAD' 300,
-            'opsz' 48;
+     font-variation-settings:
+             'FILL' 0,
+             'wght' 400,
+             'GRAD' 300,
+             'opsz' 48;
     font-size: 20px;
 }
 
+.btn-container {
+    /*padding-right: 200px;*/
+}
 .custom-btn {
     display: inline-block;
     font-weight: 500;
